--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,11 @@
     "vercel-build": "npm install vite && vite build"
   },
   "dependencies": {
-    "vite": "^6.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "vite": "^6.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
